Provide further corrections and rework of documentation

--- a/doc/inc/50/52_shading.tex
+++ b/doc/inc/50/52_shading.tex
@@ -173,10 +173,10 @@ jeden Pixel anstatt für jede Kante berechnet werden muss.
             \textbf{Gouraud-Shading mit Phong-Beleuchtungsmodell} &
             \textbf{Phong-Shading mit Phong-Beleuchtungsmodell} \\
             \cmidrule(r){1-1}\cmidrule(lr){2-2}\cmidrule(lr){3-3}\cmidrule(l){4-4}
-            \includegraphics[width=0.2\textwidth]{img/flat_shading_example.png} \newline &
-            \includegraphics[width=0.2\textwidth]{img/gouraud_shading_example.png} \newline &
-            \includegraphics[width=0.2\textwidth]{img/phong_gouraud_shading_example.png} \newline &
-            \includegraphics[width=0.2\textwidth]{img/phong_phong_shading_example.png} \newline \\
+            \includegraphics[width=0.2\textwidth]{img/flat_shading_example.pdf} \newline &
+            \includegraphics[width=0.2\textwidth]{img/gouraud_shading_example.pdf} \newline &
+            \includegraphics[width=0.2\textwidth]{img/phong_gouraud_shading_example.pdf} \newline &
+            \includegraphics[width=0.2\textwidth]{img/phong_phong_shading_example.pdf} \newline \\
         \bottomrule
     \end{tabular}
 \end{table}
