--- a/doc/inc/static/bibliography.bib
+++ b/doc/inc/static/bibliography.bib
@@ -106,12 +106,12 @@ Abgerufen am 27. September 2015}
 	pages = {527--545}
 }
 
-@book{division_introduction_1996,
+@book{menon_introduction_1996,
 	series = {Research report},
 	title = {An {Introduction} to {Implicit} {Techniques}},
 	url = {https://books.google.ch/books?id=Ew40GwAACAAJ},
 	publisher = {IBM T.J. Watson Research Center},
-	author = {Division, International Business Machines Corporation Research and Menon, J.},
+	author = {Menon, J.},
 	year = {1996}
 }
 
@@ -417,4 +417,117 @@ Die Demoszene ist im Wesentlichen auf Europa beschränkt; in den USA und in Asie
 	month = oct,
 	year = {2014},
 	file = {Beginning WebGL - Chapter 4 Examples:/home/so/.zotero/zotero/d79e17nl.default/zotero/storage/7QXT394V/chapter-4.html:text/html}
+}
+
+@inproceedings{evans_fast_2006,
+	address = {New York, NY, USA},
+	series = {{SIGGRAPH} '06},
+	title = {Fast {Approximations} for {Global} {Illumination} on {Dynamic} {Scenes}},
+	isbn = {1-59593-364-6},
+	url = {http://doi.acm.org/10.1145/1185657.1185834},
+	doi = {10.1145/1185657.1185834},
+	booktitle = {{ACM} {SIGGRAPH} 2006 {Courses}},
+	publisher = {ACM},
+	author = {Evans, Alex},
+	year = {2006},
+	pages = {153--171}
+}
+
+@misc{wikipedia_the_free_encyclopedia_umgebungsverdeckung_2015,
+	title = {Umgebungsverdeckung},
+	copyright = {Creative Commons Attribution-ShareAlike License},
+	url = {https://de.wikipedia.org/w/index.php?title=Umgebungsverdeckung&oldid=147007685},
+	abstract = {Umgebungsverdeckung (englisch Ambient Occlusion, AO) ist eine Shading-Methode, die in der 3D-Computergrafik verwendet wird, um mit relativ kurzer Renderzeit eine realistische Verschattung von Szenen zu erreichen. Das Ergebnis ist zwar nicht physikalisch korrekt, reicht jedoch in seinem Realismus oft aus, um auf rechenintensive globale Beleuchtung verzichten zu können.
+Umgebungsverdeckung wird zusätzlich zum herkömmlichen Shading mit Phong Shading oder ähnlichen Algorithmen berechnet. Das Ergebnis der AO-Berechnung wird als Graustufenbild einfach mit dem herkömmlichen Renderergebnis multipliziert. Dies kann direkt beim Rendern oder auch erst in der Nachbearbeitung erfolgen. Ein Bild, das mittels Umgebungsverdeckung berechnet wurde, ähnelt der Beleuchtungssituation eines bewölkten Tages – äußerst diffuse Schattierungen sind das Hauptmerkmal.},
+	language = {de},
+	urldate = {2016-01-13},
+	journal = {Wikipedia},
+	author = {{Wikipedia, the free encyclopedia}},
+	month = oct,
+	year = {2015},
+	note = {Page Version ID: 147007685},
+	file = {Snapshot:/home/so/.zotero/zotero/d79e17nl.default/zotero/storage/DNP8NXA2/index.html:text/html}
+}
+
+@misc{timothy_lottes_fxaa_2009,
+	title = {{FXAA}},
+	publisher = {NVidia},
+	author = {{Timothy Lottes}},
+	year = {2009}
+}
+
+@article{bagher_accurate_2012,
+	title = {Accurate {Fitting} of {Measured} {Reflectances} {Using} a {Shifted} {Gamma} {Micro}-facet {Distribution}},
+	volume = {31},
+	issn = {0167-7055},
+	url = {http://dx.doi.org/10.1111/j.1467-8659.2012.03147.x},
+	doi = {10.1111/j.1467-8659.2012.03147.x},
+	number = {4},
+	journal = {Comput. Graph. Forum},
+	author = {Bagher, M. M. and Soler, C. and Holzschuch, N.},
+	month = jun,
+	year = {2012},
+	keywords = {and texture, Color, http://www.acm.org/class/1998/ I.3.7 [Computer Graphics]: Three-Dimensional Graphics and Realism\&\#x2014, shading, shadowing},
+	pages = {1509--1518}
+}
+
+@misc{wikipedia_the_free_encyclopedia_bidirektionale_2014,
+	title = {Bidirektionale {Reflektanzverteilungsfunktion}},
+	copyright = {Creative Commons Attribution-ShareAlike License},
+	url = {https://de.wikipedia.org/w/index.php?title=Bidirektionale_Reflektanzverteilungsfunktion&oldid=136247995},
+	abstract = {Eine bidirektionale Reflektanzverteilungsfunktion (engl. Bidirectional Reflectance Distribution Function, BRDF) stellt eine Funktion für das Reflexionsverhalten von Oberflächen eines Materials unter beliebigen Einfallswinkeln dar. Sie liefert für jeden auf dem Material auftreffenden Lichtstrahl mit gegebenem Eintrittswinkel den Quotienten aus Strahlungsdichte und Bestrahlungsstärke für jeden austretenden Lichtstrahl. BRDFs werden unter anderem in der realistischen 3D-Computergrafik verwendet, wo sie einen Teil der fundamentalen Rendergleichung darstellen und dazu dienen, Oberflächen möglichst realistisch und physikalisch korrekt darzustellen. Eine Verallgemeinerung der BRDF auf Texturen stellt die BTF (Bidirectional Texturing Function) dar.
+
+Eine BRDF ist je nach gewählter Genauigkeit sehr komplex: Sie kann zum Beispiel für alle Einfalls-/Reflexionswinkel (4-dimensional), für jede Wellenlänge (5-dimensional) oder auch für jeden Punkt der Oberfläche (7-dimensional) bestimmt werden. Aufgrund dieser Komplexität werden in der Computergrafik als BRDFs meist einfache Modelle verwendet.
+Formel: 
+Es existieren grundsätzlich 2 Ansätze zur Repräsentation der BRDF-Werte:
+explizite Speicherung der geordneten Messwerte oder Simulationsergebnisse (zum Beispiel durch ein Gonioreflektometer gewonnen),
+hoher Speicherplatzbedarf bei einfacher Speicherung in fein unterteilte Proben,
+hoher Zeit- und Hardwareaufwand zur Messwerterfassung,
+schlecht für Importance Sampling geeignet,
+wichtig für Verifizierungsaufgaben,
+
+Approximierung durch analytische Funktionen (lokale Beleuchtungsmodelle).},
+	language = {de},
+	urldate = {2016-01-13},
+	journal = {Wikipedia},
+	author = {{Wikipedia, the free encyclopedia}},
+	month = nov,
+	year = {2014},
+	note = {Page Version ID: 136247995},
+	file = {Snapshot:/home/so/.zotero/zotero/d79e17nl.default/zotero/storage/RNGDCFFM/index.html:text/html}
+}
+
+@misc{brent_burley_physicall-based_2012,
+	title = {Physicall-{Based} {Shading} at {Disney}},
+	language = {en},
+	publisher = {Walt Disney Animation Studios},
+	author = {{Brent Burley}},
+	month = aug,
+	year = {2012}
+}
+
+@misc{benjamin_keiner_enhanced_2014,
+	title = {Enhanced {Sphere} {Tracing}},
+	abstract = {In this paper we present several performance and quality enhancements to classical sphere tracing: First, we
+propose a safe, over-relaxation-based method for accelerating sphere tracing. Second, a method for dynamically
+preventing self-intersections upon converting signed distance bounds enables controlling precision and rendering
+performance. In addition, we present a method for significantly accelerating the sphere tracing intersection test
+for convex objects that are enclosed in convex bounding volumes. We also propose a screen-space metric for
+the retrieval of a good intersection point candidate, in case sphere tracing does not converge thus increasing
+rendering quality without sacrificing performance. Finally, discontinuity artifacts common in sphere tracing are
+reduced using a fixed-point iteration algorithm. We demonstrate complex scenes rendered in real-time with our
+method. The methods presented in this paper have more universal applicability beyond rendering procedurally
+generated scenes in real-time and can also be combined with path-tracing-based global illumination solutions.},
+	language = {en},
+	publisher = {The Eurographics Association},
+	author = {{Benjamin Keiner} and {Henry Schäfer} and {Johann Korndörfer} and {Urs Ganse} and {Marc Stamminger}},
+	year = {2014}
+}
+
+@misc{seven_rendering_2012,
+	title = {Rendering {Mandelbox} fractals faster with {Cone} {Marching}},
+	language = {en},
+	publisher = {Fulcrum},
+	author = {{Seven}},
+	year = {2012}
 }
