--- a/doc/inc/static/title.tex
+++ b/doc/inc/static/title.tex
@@ -9,7 +9,7 @@
     % Actually not a realy satisfactory solution but working.
     %---------------------------------------------------------------------------
     \setlength{\unitlength}{1mm}
-    \includegraphics[scale=1.0]{img/BFH_Logo_B.png}
+    \includegraphics[scale=1.0]{img/BFH_Logo_B}
 
     \begin{picture}(150,2)
         \put(0,0){\color{bfhgrey}\rule{150mm}{2mm}}
